--- a/index.html
+++ b/index.html
@@ -4,12 +4,207 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="./assets/img/icon-logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/custom-bootstrap/custom-style.css">
-    <title>Document</title>
+    <title>Spotify</title>
 </head>
 
 <body>
+
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+
+                <!-- SINISTRA -->
+                <div class="col-3 bg-black vh-100">
+                    <div class="row flex-column px-4">
+                        <div class="col mb-4">
+                            <ul class="list-unstyled">
+                                <li class="text-light fs-2 mb-3">...</li>
+                                <li class="d-flex align-items-center mb-2">
+                                    <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
+                                    <a class="text-light text-decoration-none align-self-center" href="#">Home</a>
+                                </li>
+                                <li class="d-flex align-items-center mb-2">
+                                    <i class="bi bi-search text-secondary me-3 fs-4"></i>
+                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Cerca</a>
+                                </li>
+                                <li class="d-flex align-items-center mb-2">
+                                    <svg width="25px" height="30px" class="me-3" viewBox="0 0 24 24"
+                                        xmlns="http://www.w3.org/2000/svg" fill="#000000" transform="rotate(180)">
+
+                                        <g id="SVGRepo_bgCarrier" stroke-width="0" />
+
+                                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
+
+                                        <g id="SVGRepo_iconCarrier">
+                                            <defs>
+                                                <style>
+                                                    .cls-1,
+                                                    .cls-2 {
+                                                        fill: none;
+                                                        stroke: #6c757d;
+                                                        stroke-linecap: round;
+                                                        stroke-linejoin: round;
+                                                        stroke-width: 1.5px;
+                                                    }
+
+                                                    .cls-1 {
+                                                        fill-rule: evenodd;
+                                                    }
+                                                </style>
+                                            </defs>
+                                            <g id="ic-media-collection">
+                                                <path class="cls-1"
+                                                    d="M9.44,2.67,3.13,5A.2.2,0,0,0,3,5.19V18.91a.18.18,0,0,0,.13.18l6.39,2.24a.2.2,0,0,0,.27-.19L9.71,2.86A.2.2,0,0,0,9.44,2.67Z" />
+                                                <line class="cls-2" x1="13" y1="5.05" x2="13" y2="19.05" />
+                                                <line class="cls-2" x1="17" y1="5.05" x2="17" y2="19.05" />
+                                                <line class="cls-2" x1="21" y1="5.05" x2="21" y2="19.05" />
+                                            </g>
+                                        </g>
+
+                                    </svg>
+                                    <a class="text-secondary text-decoration-none align-self-center" href="#">La tua
+                                        libreria</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col border border-0 border-bottom border-1 mb-4">
+                            <ul class="list-unstyled">
+                                <li class="d-flex align-items-center mb-3">
+                                    <div
+                                        class="me-3 bg-secondary rounded-1 square d-flex justify-content-center align-items-center">
+                                        <i class="bi bi-plus fs-6 text-dark"></i>
+                                    </div>
+                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Crea
+                                        playlist</a>
+                                </li>
+                                <li class="d-flex align-items-center mb-3">
+                                    <div
+                                        class="me-3 gradient rounded-1 square d-flex justify-content-center align-items-center">
+                                        <i class="bi bi-suit-heart-fill fs-small text-light"></i>
+                                    </div>
+                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Brani che
+                                        ti piacciono</a>
+                                </li>
+                                <li class="d-flex align-items-center mb-4">
+                                    <div
+                                        class="me-3 bgGreen rounded-1 square d-flex justify-content-center align-items-center">
+                                        <i class="bi bi-bookmark-fill fs-small green"></i>
+                                    </div>
+
+                                    <a class="text-secondary text-decoration-none align-self-center" href="#">I tuoi
+                                        episodi</a>
+                                </li>
+                            </ul>
+
+                        </div>
+
+                        <div class="col">
+                            <ul class="text-secondary list-unstyled">
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CENTRO -->
+                <div id="center" class="col py-4 px-5 bg-dark">
+                    <div class="row row-cols-1">
+                        <div class="col d-flex justify-content-between mb-3">
+                            <div class="d-flex">
+                                <div
+                                    class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center me-4">
+                                    <i class="fa-solid fa-chevron-left fs-5"></i>
+                                </div>
+
+                                <div
+                                    class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center">
+                                    <i class="fa-solid fa-chevron-right fs-5"></i>
+                                </div>
+                            </div>
+                            <div class="d-flex text-light bg-black rounded-5 justify-content-end align-items-center">
+                                <div class="square me-3">
+                                    <img src="assets/img/search/image-1.jpeg" class="w-100 rounded-circle" alt="">
+                                </div>
+                                <p class="m-0 me-3">Team 1...</p>
+                                <i id="dropdown" class="fa-solid fa-caret-down fs-5 align-self-self pe-3"></i>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="row justify-content-center text-light bgCenterBlack rounded-2">
+                                <div class="col-3 p-0">
+                                    <div class="w-100">
+                                        <img src="assets/img/search/image-12.jpg" class="album-cover w-100 px-3 py-4"
+                                            alt="Album Cover">
+                                    </div>
+                                </div>
+                                <div class="col-9">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <p class="pt-3 fs-6">ALBUM</p>
+                                      <a href="#" class="fs-supersmall me-5 mt-4 text-secondary p-2 text-decoration-none">NASCONDI ANNUNCI</a> 
+                                    </div>
+                                    
+                                    <p class="fs-8 fw-bold mb-0">VIOLA (feat. Salmo)</p>
+                                    <p class="lead fs-6 mb-2">Fedez, Salmo</p>
+                                    <p class="lead fs-6">Ascolta il nuovo singolo di Fedez e Salmo!</p>
+                                    <button class="btn bgSpoty btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small">Play</button>
+                                    <button class="btn btn-outline-light btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small border-secondary">Salva</button>
+                                    <a class="text-secondary fs-2 mb-3 text-decoration-none">...</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+
+                        </div>
+                        <div class="col">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- Album Section -->
+
+                <!-- DESTRA -->
+                <div id="destra" class="col-2">
+                    <div class="row">
+                        <div class="col mb-4">
+
+                        </div>
+
+                        <div class="col">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- PLAYER -->
+        <section>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+
+        </section>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
