--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <!-- CENTRO -->
-                <div id="center" class="col py-4 px-5 bg-dark">
+                <div id="center" class="col py-4 px-5 bg-dark text-light">
                     <div class="row row-cols-1">
                         <div class="col d-flex justify-content-between mb-3">
                             <div class="d-flex">
@@ -144,7 +144,7 @@
                             </div>
                         </div>
 
-                        <div class="col">
+                        <div class="col mb-3">
                             <div class="row justify-content-center text-light bgCenterBlack rounded-2">
                                 <div class="col-3 p-0">
                                     <div class="w-100">
@@ -154,22 +154,167 @@
                                 </div>
                                 <div class="col-9">
                                     <div class="d-flex justify-content-between align-items-center">
-                                      <p class="pt-3 fs-6">ALBUM</p>
-                                      <a href="#" class="fs-supersmall me-5 mt-4 text-secondary p-2 text-decoration-none">NASCONDI ANNUNCI</a> 
+                                        <p class="pt-3 fs-6">ALBUM</p>
+                                        <a href="#"
+                                            class="fs-supersmall me-5 mt-4 text-secondary p-2 text-decoration-none">NASCONDI
+                                            ANNUNCI</a>
                                     </div>
-                                    
+
                                     <p class="fs-8 fw-bold mb-0">VIOLA (feat. Salmo)</p>
                                     <p class="lead fs-6 mb-2">Fedez, Salmo</p>
                                     <p class="lead fs-6">Ascolta il nuovo singolo di Fedez e Salmo!</p>
-                                    <button class="btn bgSpoty btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small">Play</button>
-                                    <button class="btn btn-outline-light btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small border-secondary">Salva</button>
+                                    <button
+                                        class="btn bgSpoty btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small">Play</button>
+                                    <button
+                                        class="btn btn-outline-light btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small border-secondary">Salva</button>
                                     <a class="text-secondary fs-2 mb-3 text-decoration-none">...</a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col">
+                            <div class="row row-cols-1">
+                                <div class="col p-0">
+                                    <p class="fs-2 fw-bold">Buonasera</p>
+                                </div>
+                                <div class="col">
+                                    <div class="row row-cols-3">
+                                        <div class="col p-0">
+                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
+                                                <div class="d-flex flex-wrap card1">
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
+                                                </div>
+                                            </div>
+                                        </div>
 
+                                        <div class="col p-0">
+                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
+                                                <div class="d-flex flex-wrap card1">
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col p-0">
+                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
+                                                <div class="d-flex flex-wrap card1">
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col p-0">
+                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
+                                                <div class="d-flex flex-wrap card1">
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col p-0">
+                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
+                                                <div class="d-flex flex-wrap card1">
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col p-0">
+                                            <div class="d-flex align-items-center bgGray rounded-2 me-3 mb-2">
+                                                <div class="d-flex flex-wrap card1">
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                    <div class="w-50">
+                                                        <img src="assets/img/main/image-1.jpg" class="w-100" alt="">
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <p class="ms-3 fs-small mb-0">La miglior playlist della classe</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col">
 
