--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-3 bg-black vh-100">
+                <div class="col-3 bg-black">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
@@ -146,23 +146,23 @@
 
                         <div class="col mb-3">
                             <div class="row justify-content-center text-light bgCenterBlack rounded-2">
-                                <div class="col-3 p-0">
+                                <div class="col-2 p-0">
                                     <div class="w-100">
                                         <img src="assets/img/search/image-12.jpg" class="album-cover w-100 px-3 py-4"
                                             alt="Album Cover">
                                     </div>
                                 </div>
-                                <div class="col-9">
+                                <div class="col-10">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <p class="pt-3 fs-6">ALBUM</p>
+                                        <p class="pt-3 fs-small mb-1">ALBUM</p>
                                         <a href="#"
-                                            class="fs-supersmall me-5 mt-4 text-secondary p-2 text-decoration-none">NASCONDI
+                                            class="fs-supersmall me-5 mt-2 text-secondary p-2 text-decoration-none">NASCONDI
                                             ANNUNCI</a>
                                     </div>
 
                                     <p class="fs-8 fw-bold mb-0">VIOLA (feat. Salmo)</p>
                                     <p class="lead fs-6 mb-2">Fedez, Salmo</p>
-                                    <p class="lead fs-6">Ascolta il nuovo singolo di Fedez e Salmo!</p>
+                                    <p class="lead fs-6 mb-1">Ascolta il nuovo singolo di Fedez e Salmo!</p>
                                     <button
                                         class="btn bgSpoty btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small">Play</button>
                                     <button
@@ -173,7 +173,7 @@
                         </div>
 
                         <div class="col">
-                            <div class="row row-cols-1">
+                            <div class="row row-cols-1 mb-3">
                                 <div class="col p-0">
                                     <p class="fs-2 fw-bold">Buonasera</p>
                                 </div>
@@ -316,13 +316,65 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col p-0">
+                            <p class="fs-5 fw-bold">Altro di ciò che ti piace</p>
+                        </div>
                         <div class="col">
+                            <div class="row row-cols-5">
+                                <div class="col">
+                                    <div class="card p-3 bg-black text-secondary">
+                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title text-light">Card title</h5>
+                                            <p class="card-text">Some quick example text to build...</p>
+                                        </div>
+                                    </div>
+                                </div>
 
+                                <div class="col">
+                                    <div class="card p-3 bg-black text-secondary">
+                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title text-light">Card title</h5>
+                                            <p class="card-text">Some quick example text to build...</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <div class="card p-3 bg-black text-secondary">
+                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title text-light">Card title</h5>
+                                            <p class="card-text">Some quick example text to build...</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <div class="card p-3 bg-black text-secondary">
+                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title text-light">Card title</h5>
+                                            <p class="card-text">Some quick example text to build...</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <div class="card p-3 bg-black text-secondary">
+                                        <img src="assets/img/main/image-10.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title text-light">Card title</h5>
+                                            <p class="card-text">Some quick example text to build...</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- Album Section -->
-
                 <!-- DESTRA -->
                 <div id="destra" class="col-2">
                     <div class="row">
@@ -335,12 +387,13 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
         <!-- PLAYER -->
-        <section>
-            <div class="container-fluid">
+        <section class="position-fixed bottom-0">
+            <div class="container-fluid bg-dark border border-0 border-top border-1 border-light">
                 <div class="row">
                     <div class="col"></div>
                     <div class="col"></div>
