--- a/index.html
+++ b/index.html
@@ -376,32 +376,100 @@
                     </div>
                 </div>
                 <!-- DESTRA -->
-                <div id="destra" class="col-2">
-                    <div class="row">
-                        <div class="col mb-4">
-
+                <div id="destra" class="col-2 bg-black text-light">
+                    <div class="row my-4">
+                        <div class="col d-flex justify-content-between align-items-center">
+                            <div>
+                                <p class="mb-0">Attività amici</p>
+                            </div>
+                           <div class="icon-right d-flex fs-5 text-white-50">
+                            <i class="bi bi-person-add me-2"></i>
+                            <i class="bi bi-x fs-4"></i>
                         </div>
+                        </div>
+                    </div>
+                    <div class="row text-white-50 mb-4">
+                        <div class="w-25 col-3">
+                            <img src="assets/img/search/image-51.jpg" class="rounded-circle w-100" alt="img-friends">
+                        </div>
+                        <div class="col-6">
+                            <p class="my-1 fs-6">Charlie Hookham</p>
+                            <p class="my-1 fs-supersmall">In Camera . Yumi Zouma</p>
+                            <p class="fs-supersmall"><i class="bi bi-record-circle"></i> EP ||||</p>
+                        </div>
+                        <div class="col-3">
+                            <p class="fs-small">4 ore</p>
+                        </div>
+                    </div>
 
-                        <div class="col">
-
+                    <div class="row text-white-50 mb-4">
+                        <div class="w-25 col-3">
+                            <img src="assets/img/search/image-10.jpg" class="rounded-circle w-100" alt="img-friends">
+                        </div>
+                        <div class="col-6">
+                            <p class="my-1 fs-6">lightdark02</p>
+                            <p class="my-1 fs-supersmall">Aimed to Kill . Jade LeMark</p>
+                            <p class="fs-supersmall"><i class="bi bi-record-circle"></i> Aimed to Kill</p>
+                        </div>
+                        <div class="col-3">
+                            <p class="fs-small">8 ore</p>
+                        </div>
+                    </div>
+                    <div class="row text-white-50">
+                        <div class="w-25 col-3">
+                            <img src="assets/img/search/image-17.jpg" class="rounded-circle w-100" alt="img-friends">
+                        </div>
+                        <div class="col-6">
+                            <p class="my-1 fs-6">Valeria Traverso</p>
+                            <p class="my-1 fs-supersmall">New Kings . Sleeping Wolf</p>
+                            <p class="fs-supersmall"><i class="bi bi-music-note-beamed"></i> Twint Badass mood</p>
+                        </div>
+                        <div class="col-3">
+                            <p class="fs-small">3 giorni</p>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
 
-        <!-- PLAYER -->
-        <section class="position-fixed bottom-0">
-            <div class="container-fluid bg-dark border border-0 border-top border-1 border-light">
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+       <!-- PLAYER -->
+       <section class="position-fixed bottom-0 player-bar w-100">
+        <div class="container-fluid bg-dark border border-0 border-top border-1 border-light p-0">
+            <div class="row text-center">
+                <div class="col-2 text-start">
+                    <img src="assets/img/main/image-1.jpg" class="w-25 m-2" alt="icona">
+                </div>
+                <div class="col-8 text-center">
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-center align-items-center">
+                            <div class="m-2 mx-3">
+                                <i id="shuffle-icon" class="bi bi-shuffle text-light fs-5"></i>
+                            </div>
+                            <div class="m-2">
+                                <i class="bi bi-skip-backward-fill text-light fs-5"></i>
+                            </div>
+                            <div class="m-2 mx-4">
+                                <i class="bi bi-play-circle-fill text-light fs-2"></i>
+                            </div>
+                            <div class="m-2">
+                                <i class="bi bi-skip-forward-fill text-light fs-5"></i>
+                            </div>
+                            <div class="m-2 mx-3">
+                                <i id="repeat-icon" class="bi bi-repeat text-light fs-5"></i>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="progress m-2" style="height: 5px; background-color: #444;">
+                                <div id="progress-bar" class="progress-bar bg-light" role="progressbar" style="width: 0%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
                 </div>
             </div>
-
-        </section>
+        </div>
+    </section>
     </main>
 
 
