Co-authored-by: luca-vigano <luca-vigano@users.noreply.github.com> Co-authored-by: FedericoIafolla <FedericoIafolla@users.noreply.github.com> Co-authored-by: DianaFriptuleac <DianaFriptuleac@users.noreply.github.com> Co-authored-by: SaraPavone <SaraPavone@users.noreply.github.com>

--- a/album.html
+++ b/album.html
@@ -20,7 +20,7 @@
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-3 bg-black vh-100">
+                <div class="col-2 bg-black vh-100">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
@@ -176,8 +176,8 @@
 
                         </div>
                               <!--parte centrale- canzoni -->
-                    <div class="row">
-                        <div class="w-15">
+                    <div class="row btn-spotify-album">
+                        <div>
                         <button type="submit" class="btn bgSpoty w-100 rounded-circle" >
                             <i class="bi bi-play-fill fs-1" class=""></i></button>
                     </div>
