--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-3 bg-black">
+                <div class="col-2 bg-black">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
@@ -144,32 +144,8 @@
                             </div>
                         </div>
 
-                        <div class="col mb-3">
-                            <div class="row justify-content-center text-light bgCenterBlack rounded-2">
-                                <div class="col-2 p-0">
-                                    <div class="w-100">
-                                        <img src="assets/img/search/image-12.jpg" class="album-cover w-100 px-3 py-4"
-                                            alt="Album Cover">
-                                    </div>
-                                </div>
-                                <div class="col-10">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <p class="pt-3 fs-small mb-1">ALBUM</p>
-                                        <a href="#"
-                                            class="fs-supersmall me-5 mt-2 text-secondary p-2 text-decoration-none">NASCONDI
-                                            ANNUNCI</a>
-                                    </div>
-
-                                    <p class="fs-8 fw-bold mb-0">VIOLA (feat. Salmo)</p>
-                                    <p class="lead fs-6 mb-2">Fedez, Salmo</p>
-                                    <p class="lead fs-6 mb-1">Ascolta il nuovo singolo di Fedez e Salmo!</p>
-                                    <button
-                                        class="btn bgSpoty btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small">Play</button>
-                                    <button
-                                        class="btn btn-outline-light btn-lg rounded-5 me-3 py-2 px-4 fw-bold fs-small border-secondary">Salva</button>
-                                    <a class="text-secondary fs-2 mb-3 text-decoration-none">...</a>
-                                </div>
-                            </div>
+                        <div id="annunci" class="col mb-3">
+                            
                         </div>
 
                         <div class="col">
@@ -477,6 +453,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/test.js"></script>
 </body>
 
 </html>
