--- a/index.html
+++ b/index.html
@@ -409,42 +409,8 @@
         </div>
 
        <!-- PLAYER -->
-       <section class="position-fixed bottom-0 player-bar w-100">
-        <div class="container-fluid bg-dark border border-0 border-top border-1 border-light p-0">
-            <div class="row text-center">
-                <div class="col-2 text-start">
-                    <img src="assets/img/main/image-1.jpg" class="w-25 m-2" alt="icona">
-                </div>
-                <div class="col-8 text-center">
-                    <div class="row">
-                        <div class="col-12 d-flex justify-content-center align-items-center">
-                            <div class="m-2 mx-3">
-                                <i id="shuffle-icon" class="bi bi-shuffle text-light fs-5"></i>
-                            </div>
-                            <div class="m-2">
-                                <i class="bi bi-skip-backward-fill text-light fs-5"></i>
-                            </div>
-                            <div class="m-2 mx-4">
-                                <i class="bi bi-play-circle-fill text-light fs-2"></i>
-                            </div>
-                            <div class="m-2">
-                                <i class="bi bi-skip-forward-fill text-light fs-5"></i>
-                            </div>
-                            <div class="m-2 mx-3">
-                                <i id="repeat-icon" class="bi bi-repeat text-light fs-5"></i>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="progress m-2" style="height: 5px; background-color: #444;">
-                                <div id="progress-bar" class="progress-bar bg-light" role="progressbar" style="width: 0%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                </div>
-            </div>
-        </div>
+       <section id="sectionPlayer" class="position-fixed bottom-0 player-bar w-100">
+        
     </section>
     </main>
 
