--- a/album.html
+++ b/album.html
@@ -193,19 +193,33 @@
                             <div>
                                 <p class="fs-2">...</p>
                             </div>
-                            </div>
+                        </div>
                     </div>
-                    
-                    <div class="row text-white-50 my-4 fs-5">
-                        <div class="col">
-                            <p>#  Titolo</p>
+
+                    <div class="row px-4 pb-2 text-light my-4 fs-6 border-bottom border-light-subtle opacity-50 align-items-center">
+                        <div class="col-6 d-flex">
+                            <div class="col-1 px-0 me-2 mb-0 align-self-center">#</div>
+                            <div class="col px-0 mb-0 align-self-center">TITOLO</div>
                         </div>
-                        <div class="col">
-                            <p class="text">Riproduzione</p>
+                        <div class="col-3 px-0">
+                            <p class="text-end mb-0">RIPRODUZIONE</p>
                         </div>
-                        <div class="col">
-                            <p><i class="bi bi-clock"></i></p>
+                        <div class="col-3 px-0">
+                            <p class="mb-0 text-end"><i class="bi bi-clock"></i></p>
                         </div>
+                    </div>
+
+                    <!--parte centrale dinamica-->
+                    <div class="row px-4 text-light my-4 fs-6 align-items-center">
+                        <div class="col-6 d-flex">
+                            <div class="col-1 px-0 me-2 mb-0 align-self-center">1</div>
+                            <div class="col px-0 mb-0">
+                                <h4 class="mb-1">pippo</h4>
+                                <p>culo</p>
+                            </div>
+                        </div>
+                        <div class="col-3 px-0 text-end">1654685651</div>
+                        <div class="col-3 px-0 text-end">1.1</div>
                     </div>
                 </div>
 
